--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,6 +7,15 @@
   <title>My Wordle App with React</title>
 </head>
 <body>
-  <div id="root"></div>
+  <div>
+    <!-- render react here -->
+    <h1>My Wordle App with React</h1>
+    <div id="app"></div>
+  </div>
 </body>
 </html>
+<!-- Include React and ReactDOM scripts -->
+<script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+<!-- Your React components -->
+<script src="../../client/src/index.js"></script>
